Bug 504071. Allow image drawing to snap to pixel boundaries even if there's scaling, on all platforms. Not only is it faster, it avoids seaming. This is consistent with snapping behavior of other drawing operations. r=joe